# claudebench

./: .env.example  .gitignore  2025-09-11-bootstrap.txt  CLAUDE.md  CLAUDEBENCH.md  CONTRIBUTING.md  LICENSE  README.md  bts.jsonc  bunfig.toml  package-lock.json  package.json  test-mcp-tools.py  turbo.json  update-tests.sh
.github/workflows/: claude-code-review.yml  claude.yml
apps/inference/: Dockerfile  MANIFEST.in  README.md  package.json  pyproject.toml  requirements.txt  setup.py  test_all_endpoints.sh  test_conflict.json  test_context.json  test_decomposition.json  test_sampling.py  test_synthesis.json
apps/inference/src/claudebench_inference/: __init__.py  main.py  models.py  prompts.py  sampling.py
apps/inference/src/claudebench_inference.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/inference/src/claudebench_inference/templates/: conflict-resolution.j2  decomposition.j2  progress-synthesis.j2  specialist-context.j2
apps/server/: .bunignore  .env.example  HOWTO_INSTRUMENTED_RESILIENT.md  docker-compose.yml  package.json  test-hook-validator.ts  tsconfig.json  (+1 more)
docs/: CORE_COMPONENTS_ANALYSIS.md  FRONTEND_SERVICES.md  HOWTO_INSTRUMENTED_RESILIENT.md  LUA_SCRIPTS_ANALYSIS.md  MCP_SAMPLING.md  PATTERN_MIGRATION_BRIEF.md  TASK_HANDLERS_ANALYSIS.md  TESTS_STATUS.md  TEST_CASES.md  TEST_HANDLERS_ANALYSIS.md  ZOD-REFINE-PATTERN.md  docusaurus.config.ts  package.json
memory/: constitution.md
plans/: PLAN_PHASE_3_3.md
scripts/: .README.md.swp  CLAUDE_CODE_HOOKS_SETUP.md  README.md  claude_code_hooks.json  claude_code_hooks.py  claude_event_relay.py  claudebench-init.ts  clear-rate-limits.ts  db-backup.ts  db-flush.ts  db-restore.ts  mcp_bridge.sh  relay.ts  test_hooks.py  test_hooks_jsonrpc.py  test_mcp.py  test_mcp.sh
(+333 files in other folders)
